--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.5",
+    "@tanstack/query-core": "^5.60.6",
+    "@tanstack/react-query": "^5.61.0",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "^2.21.2",
